--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "bun src/db/seed.ts"
+    "db:seed:quiz": "bunx tsx src/db/seed-quiz.ts"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
@@ -23,6 +23,7 @@
     "@hono/zod-validator": "^0.7.5",
     "@neondatabase/serverless": "^1.0.2",
     "better-auth": "^1.4.3",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "hono": "^4.10.7",
     "zod": "^4.1.13"
