--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "hono": "^4.10.7",
+    "uuid": "^13.0.0",
     "zod": "^4.1.13"
   }
 }
